# car_api

./: .env  Dockerfile  README.md  car_api.postman_collection.json  docker-compose.yml  nginx.conf  pyproject.toml  setup.cfg
apps/advertisement/: models.py  serializers.py
apps/advertisement/choices_adv/: adv_choices.py
apps/car/: models.py
apps/car/choices_car/: car_choices.py
apps/users/: manager.py  models.py
backend/: manage.py
backend/apps/advertisement/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/car/: models.py  serializers.py
backend/apps/chat/: consumers.py  routing.py
backend/apps/users/: filters.py  manager.py  models.py  serializers.py  urls.py  views.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/configs/extra_conf/: __init__.py  email_conf.py  jwt_conf.py  rest_conf.py
backend/core/: paginations.py
backend/core/enums/: action_token_enum.py
backend/core/handlers/: error_handler.py
backend/core/middlewares/: auth_socket_middleware.py
backend/core/permissions/: is_buyer.py  is_premium.py  is_seller.py  is_superuser_or_is_staff.py  is_superuser_permission.py
backend/core/services/: check_profanity_service.py  currency_service.py  email_service.py  file_service.py  jwt_service.py  profanity_service.py
backend/templates/: additional_email_check.html  base.html  recovery.html  register.html
client/: index.html
configs/: settings.py  urls.py
templates/: base.html  test.html
(+27 files in other folders)
