[tool.poetry]
name = "carsale-api"
version = "0.1.0"
description = ""
authors = ["Makima3 <natalia.kolchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.9"
django-dotenv = "^1.4.2"
django-countries = "^7.6.1"
django-filter = "^24.3"
pillow = "^10.4.0"
djangorestframework-simplejwt = "^5.3.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
